--- a/will_of_the_prophets/templates/will_of_the_prophets/roll_frequency.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/roll_frequency.html
@@ -6,14 +6,14 @@
 
 <section class="lcars-group lcars-group--double-sidebar">
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--top">
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="hopbush" top_left_inner_elbow=True only %}
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="melrose" only %}
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="hopbush" top_right_inner_elbow=True only %}
+        {% include "_lcars_filler.html" with color="hopbush" top_left_inner_elbow=True only %}
+        {% include "_lcars_filler.html" with color="melrose" only %}
+        {% include "_lcars_filler.html" with color="hopbush" top_right_inner_elbow=True only %}
     </div>
     <div class="lcars-group__side-bar lcars-group__side-bar--left">
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="hopbush" top_left_outer_elbow=True only %}
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="peach-orange" label="Roll Value" only %}
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="hopbush" bottom_left_outer_elbow=True only %}
+        {% include "_lcars_filler.html" with color="hopbush" top_left_outer_elbow=True only %}
+        {% include "_lcars_filler.html" with color="peach-orange" label="Roll Value" only %}
+        {% include "_lcars_filler.html" with color="hopbush" bottom_left_outer_elbow=True only %}
     </div>
     <div class="lcars-group__content">
         <h2 class="lcars-group__content-header">
@@ -23,16 +23,16 @@
     </div>
 
     <div class="lcars-group__side-bar lcars-group__side-bar--right">
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="hopbush" top_right_outer_elbow=True only %}
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="orange-peel" only %}
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="peach-orange" only %}
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="hopbush" bottom_right_outer_elbow=True only %}
+        {% include "_lcars_filler.html" with color="hopbush" top_right_outer_elbow=True only %}
+        {% include "_lcars_filler.html" with color="orange-peel" only %}
+        {% include "_lcars_filler.html" with color="peach-orange" only %}
+        {% include "_lcars_filler.html" with color="hopbush" bottom_right_outer_elbow=True only %}
     </div>
 
     <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--bottom">
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="hopbush" bottom_left_inner_elbow=True only %}
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="melrose" center=True label="Roll Count" only %}
-        {% include "will_of_the_prophets/_lcars_filler.html" with color="hopbush" bottom_right_inner_elbow=True only %}
+        {% include "_lcars_filler.html" with color="hopbush" bottom_left_inner_elbow=True only %}
+        {% include "_lcars_filler.html" with color="melrose" center=True label="Roll Count" only %}
+        {% include "_lcars_filler.html" with color="hopbush" bottom_right_inner_elbow=True only %}
     </div>
 </section>
 
