--- a/will_of_the_prophets/templates/base.html
+++ b/will_of_the_prophets/templates/base.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 <html>
-
 <head>
     <title>{% block title %}Game of Buttholes: The Will of the Prophets{% endblock %}</title>
 
@@ -11,22 +10,17 @@
     <link rel="apple-touch-icon" sizes="57x57" href="{% static 'will_of_the_prophets/apple_touch_icons/57x57.png' %}" />
     <link rel="apple-touch-icon" sizes="72x72" href="{% static 'will_of_the_prophets/apple_touch_icons/72x72.png' %}" />
     <link rel="apple-touch-icon" sizes="76x76" href="{% static 'will_of_the_prophets/apple_touch_icons/76x76.png' %}" />
-    <link rel="apple-touch-icon" sizes="114x114"
-        href="{% static 'will_of_the_prophets/apple_touch_icons/114x114.png' %}" />
-    <link rel="apple-touch-icon" sizes="120x120"
-        href="{% static 'will_of_the_prophets/apple_touch_icons/120x120.png' %}" />
-    <link rel="apple-touch-icon" sizes="144x144"
-        href="{% static 'will_of_the_prophets/apple_touch_icons/144x144.png' %}" />
-    <link rel="apple-touch-icon" sizes="152x152"
-        href="{% static 'will_of_the_prophets/apple_touch_icons/152x152.png' %}" />
-    <link rel="apple-touch-icon" sizes="180x180"
-        href="{% static 'will_of_the_prophets/apple_touch_icons/180x180.png' %}" />
+    <link rel="apple-touch-icon" sizes="114x114" href="{% static 'will_of_the_prophets/apple_touch_icons/114x114.png' %}" />
+    <link rel="apple-touch-icon" sizes="120x120" href="{% static 'will_of_the_prophets/apple_touch_icons/120x120.png' %}" />
+    <link rel="apple-touch-icon" sizes="144x144" href="{% static 'will_of_the_prophets/apple_touch_icons/144x144.png' %}" />
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'will_of_the_prophets/apple_touch_icons/152x152.png' %}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'will_of_the_prophets/apple_touch_icons/180x180.png' %}" />
 
     <style>
         @font-face {
             font-family: 'lcars';
             src: url('{% static 'will_of_the_prophets/fonts/lcars_bold.woff2' %}') format('woff2'),
-            url('{% static 'will_of_the_prophets/fonts/lcars_bold.woff' %}') format('woff');
+                 url('{% static 'will_of_the_prophets/fonts/lcars_bold.woff' %}') format('woff');
             font-weight: bold;
             font-style: normal;
 
@@ -35,12 +29,14 @@
         @font-face {
             font-family: 'lcars';
             src: url('{% static 'will_of_the_prophets/fonts/lcars.woff2' %}') format('woff2'),
-            url('{% static 'will_of_the_prophets/fonts/lcars.woff' %}') format('woff');
+                 url('{% static 'will_of_the_prophets/fonts/lcars.woff' %}') format('woff');
             font-weight: normal;
             font-style: normal;
         }
     </style>
+
     <link href="{% sass_src 'will_of_the_prophets/styles/index.scss' %}" rel="stylesheet" type="text/css" />
+
     {% block style %}
     {% endblock %}
 </head>
@@ -51,11 +47,12 @@
         {% endblock %}
     </div>
 </body>
+
 {% load raven %}
+
 <script src="https://cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script>
 <script>
     Raven.config('{% sentry_public_dsn %}').install()
-</script>
 </script>
 <script src="{% static 'will_of_the_prophets/buttholes.js' %}"></script>
 {% block script %}
