--- a/will_of_the_prophets/templates/will_of_the_prophets/roll.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/roll.html
@@ -31,8 +31,8 @@
 
             <div class="roll-form__form">
                 {{ form.embargo.label_tag }}
-                {{ form.embargo|add_class:'roll-form__input'|attr:'placeholder:Select Date and Time' }}
-                <button class="roll-form__submit" type="submit">Roll!</button>
+                {{ form.embargo|add_class:'lcars-input'|attr:'placeholder:Select Date and Time' }}
+                <button class="lcars-button" type="submit">Roll!</button>
             </div>
         </form>
     </div>
