--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_roll-form.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_roll-form.scss
@@ -10,6 +10,22 @@
       font-size: 3vw
     )
   );
+
+  input[type="text"] {
+    @include cap-variable-widths(
+      (
+        margin: 0vw 1vw
+      )
+    );
+  }
+
+  button {
+    @include cap-variable-widths(
+      (
+        margin: 0vw 1vw
+      )
+    );
+  }
 }
 
 .roll-form__error {
@@ -26,52 +42,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.roll-form__input {
-  display: block;
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  background: transparent;
-  border: 0px solid currentColor;
-  text-align: center;
-  text-transform: uppercase;
-  line-height: 1;
-  cursor: pointer;
-
-  @include cap-variable-widths(
-    (
-      border-radius: 1vw,
-      padding: 0.5vw 1vw,
-      margin: 0vw 1vw,
-      border-width: 0.5vw
-    )
-  );
-}
-
-.roll-form__input::placeholder {
-  text-align: center;
-  text-transform: uppercase;
-  color: lcars-color("orange-peel");
-  opacity: 0.7;
-}
-
-.roll-form__submit {
-  font-family: inherit;
-  font-size: inherit;
-  border: none;
-  color: lcars-color("blue-charcoal");
-  background: lcars-color("orange-peel");
-  text-transform: uppercase;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-
-  @include cap-variable-widths(
-    (
-      border-radius: 10vw,
-      padding: 0.5vw 3vw,
-      margin: 0vw 1vw
-    )
-  );
 }
