Fix date picker on the roll page

--- a/will_of_the_prophets/templates/will_of_the_prophets/roll.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/roll.html
@@ -110,7 +110,7 @@
 ></script>
 <script type="text/javascript">
     $(function () {
-        $('.roll-form__input').datetimepicker({
+        $('.lcars-input').datetimepicker({
             theme: 'dark',
             format: 'Y-m-d H:i',
         });
