Fix left margin on roll_frequency

--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_roll-chart.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_roll-chart.scss
@@ -63,11 +63,11 @@ $chart-left-margin: 3vw;
 }
 
 .roll-chart__bar-label {
-  width: $chart-left-margin;
   text-align: right;
 
   @include cap-variable-widths(
     (
+      width: $chart-left-margin,
       padding-right: 1vw
     )
   );
