--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_legend.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_legend.scss
@@ -28,8 +28,7 @@
   object-fit: contain;
   @include cap-variable-widths(
     (
-      width: 10vw,
-      height: 10vw
+      width: 10vw
     )
   );
 }
