Fix image rendering in the buttholes legend
The issue was that I forgot to put `align-item: flex-start` on the
legend items. This was causing the browser to freak out and try to
stretch the image.

--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_legend.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_legend.scss
@@ -16,6 +16,8 @@
 
 .legend__item {
   display: flex;
+  align-items: flex-start;
+
   @include cap-variable-widths(
     (
       padding: 1vw
@@ -24,8 +26,6 @@
 }
 
 .legend__item-img {
-  grid-area: img;
-  object-fit: contain;
   @include cap-variable-widths(
     (
       width: 10vw
