Move to new sentry library and use CSP nonce.

--- a/will_of_the_prophets/templates/_lcars_filler.html
+++ b/will_of_the_prophets/templates/_lcars_filler.html
@@ -17,5 +17,7 @@
         {% if bottom_left_inner_elbow %}lcars-filler--bottom-left-elbow{% endif %}
     "
 >
-    {{label}}
+    {% if label %}
+        {{ label }}
+    {% endif %}
 </div>
