--- a/will_of_the_prophets/templates/base.html
+++ b/will_of_the_prophets/templates/base.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" sizes="152x152" href="{% static 'will_of_the_prophets/apple_touch_icons/152x152.png' %}" />
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'will_of_the_prophets/apple_touch_icons/180x180.png' %}" />
 
-    <style>
+    <style {{ style_nonce }}>
         @font-face {
             font-family: 'federation';
             src: url('{% static 'will_of_the_prophets/fonts/federation.woff2' %}') format('woff2'),
@@ -56,12 +56,11 @@
     </div>
 </body>
 
-{% load raven %}
-
-<script src="https://cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script>
-<script>
-    Raven.config('{% sentry_public_dsn %}').install()
+<script src="https://browser.sentry-cdn.com/5.6.1/bundle.min.js" integrity="sha384-pGTFmbQfua2KiaV2+ZLlfowPdd5VMT2xU4zCBcuJr7TVQozMO+I1FmPuVHY3u8KB" crossorigin="anonymous"></script>
+<script {{ script_nonce }}>
+    Sentry.init({dsn: "{{ sentry_dsn }}"});
 </script>
+
 <script src="{% static 'will_of_the_prophets/buttholes.js' %}"></script>
 {% block script %}
 {% endblock %}
