Let date selector appear when CSP is enabled.

--- a/will_of_the_prophets/templates/will_of_the_prophets/roll.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/roll.html
@@ -108,7 +108,7 @@
     integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk="
     crossorigin="anonymous"
 ></script>
-<script type="text/javascript">
+<script type="text/javascript" nonce="{{request.csp_nonce}}">
     $(function () {
         $('.lcars-input').datetimepicker({
             theme: 'dark',
