--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_lcars-button.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_lcars-button.scss
@@ -13,7 +13,7 @@
   @include cap-variable-widths(
     (
       border-radius: 10vw,
-      padding: 0.5vw 3vw
+      padding: 0.5vw 3vw,
     )
   );
 }
