--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_variables.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_variables.scss
@@ -17,7 +17,7 @@ $lcars-colors: (
   "hopbush": #cc6699,
   "bright-turquoise": #00c3fc,
   "dodger-blue": #5599ff,
-  "mariner": #3366cc
+  "mariner": #3366cc,
 );
 
 @function lcars-color($color) {
