--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_lcars-input.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_lcars-input.scss
@@ -13,7 +13,7 @@
     (
       border-radius: 1vw,
       padding: 0.5vw 1vw,
-      border-width: 0.5vw
+      border-width: 0.5vw,
     )
   );
 }
