--- a/will_of_the_prophets/templates/base.html
+++ b/will_of_the_prophets/templates/base.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %}Game of Buttholes: The Will of the Prophets{% endblock %}</title>
+    <title>{% block title %}Game of Buttholes: The Will of the Caretaker{% endblock %}</title>
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="{% static 'will_of_the_prophets/apple_touch_icons/default.png' %}" />
